# file-analyzer

./: CMakeLists.txt  README
config/: patterns.json
include/security/: file_analyzer.hpp  pattern_manager.hpp
src/: file_analyzer.cpp  main.cpp  pattern_manager.cpp
